# lawyergpt

./: .dockerignore  .gitignore  Dockerfile  README.md  manifest.xml  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: gpt.py  main.py
scripts/: runserver.sh
src/commands/: commands.html
src/taskpane/: taskpane.html  taskpane.ts
